model 마이그레이션

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,4 @@ Temporary Items
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,django,linux,visualstudiocode
 .env
+accountapp/migrations/
