--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.4.1
+beautifulsoup4==4.10.0
 certifi==2021.10.8
 Django==3.2.9
+django-bootstrap4==21.1
 django-environ==0.8.1
 importlib-metadata==4.8.2
 Markdown==3.3.6
 pytz==2021.3
+soupsieve==2.3.1
 sqlparse==0.4.2
 zipp==3.6.0
